# chroma-perf-testing

./: .gitignore  README.md  docker-compose-tmp-mounted.yml  docker-compose.yml  pyproject.toml
.github/workflows/: run_test.yaml
notebooks/: plots.ipynb
perf_test/: generate_graphs.py  locust_t.py  merge_results.py  run_perf_test.py
