[tool.poetry]
name = "chroma-perf-testing"
version = "0.1.0"
description = ""
authors = ["Trayan Azarov <trayan.azarov@amikos.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb= "^0.5.0"
locust = "^2.27.0"
orjson = "^3.9.13"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pyarrow = "^16.1.0"
fastparquet = "^2024.2.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
